# lidar_test

./: .gitignore  CmakeLists.txt  __init__.py  blockbitloss.py  chore.ipynb  chores.py  dataset_generate.py  eval_diffusion.py  eval_encoder.py  eval_encoding.py  evaluate.py  evaluate_overfit.py  evaluate_reconst.py  example.py  exp.py  lidar_rec.yaml  losstest.py  train.py  trainDDP.py  train_diffusion.py  train_diffusion_multi.py  train_encoding.py  train_encoding_TEASER.py  train_encoding_TEASER_from_supervised.py  train_encoding_from_scratch.py  train_encoding_impulse.py  train_encoding_multi.py  train_from_supervised.py  train_from_supervised_impulse.py  train_reconstruction.py  train_test.py  train_upsampling.py  train_v3.py  trainshell.sh  trainshell_gpu_checker.sh  trainshell_gpu_checker_TEASER.sh  trainshell_gpu_checker_impulse.sh  trainv2.py
dataset/: CMakeLists.txt  aaa.py  dataset_generate.py  dataset_generate_rsparse.py  generate_centroid_xyzn_map.cpp  generate_gt_map.py  generate_input.sh  generate_map.sh  generate_odometry_dataset.py  generate_vertical_downsample_seq.py  generate_vertical_downsampled.py  initial_corr_gen.cpp  inlier_gt_generator.cpp  inlier_xyzn.cpp  map_voxelize.py  points_downsample.cpp  voxel_downsample.py
include/: cluster_manager.hpp  dataio.hpp  eval.hpp  filtering.hpp  imageProjection.hpp  patchwork.hpp  quatro.hpp  semantic_teaser.h  utility.h
include/desc/: STDesc.h
include/dlo/: dlo.h
include/teaser/: registration.h
inputprocess/: bbox.py  lidar_to_tensor.py
loss/: CombinedLossAE.py  CombinedLossAETeaser.py  CombinedLossAE_Impulse_MSE.py
model/: LidarDiffusion.py  LidarEncoder.py  LidarUpsample.py  PTv3.py  TULIP.py  __init__.py  model.py  swin_transformer_v2.py
model/serialization/: hilbert.py
reconstruction/: CMakeLists.txt  map_generator.py  mapgeneration.cpp  pointcloud_processor  pruningloss.py  reconst_gt_generator.py  trianglester.py
src/: inlier_generator.cpp  semantic_teaser.cpp
util/: __init__.py  ddp_util.py  trainutil.py
